--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "i18next": "22.4.15",
     "jwt-decode": "^3.1.2",
     "keen-slider": "6.8.5",
-    "next": "^15.3.0",
+    "next": "13.3.2",
     "nprogress": "0.2.0",
     "prismjs": "1.29.0",
-    "react": "^19.1.0",
+    "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-datepicker": "4.11.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
     "react-hook-form": "7.43.9",
     "react-hot-toast": "2.4.1",
