--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@babel/eslint-parser": "7.21.3",
     "@casl/ability": "6.5.0",
     "@casl/react": "3.1.0",
-    "@emotion/cache": "11.10.8",
-    "@emotion/react": "11.10.8",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/server": "11.10.0",
-    "@emotion/styled": "11.10.8",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "3.1.0",
     "@iconify/react": "4.1.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.128",
-    "@mui/material": "5.12.2",
+    "@mui/material": "^5.14.0",
     "@popperjs/core": "2.11.7",
     "@reduxjs/toolkit": "1.9.5",
     "axios": "1.4.0",
