--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/eslint-parser": "7.21.3",
     "@casl/ability": "6.5.0",
     "@casl/react": "3.1.0",
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "11.10.0",
@@ -23,8 +24,9 @@
     "@hookform/resolvers": "3.1.0",
     "@iconify/react": "4.1.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "5.0.0-alpha.128",
+    "@mui/lab": "^5.0.0-alpha.128",
     "@mui/material": "^5.14.0",
+    "@mui/x-date-pickers": "^5.0.17",
     "@popperjs/core": "2.11.7",
     "@reduxjs/toolkit": "1.9.5",
     "axios": "1.4.0",
@@ -32,7 +34,7 @@
     "bootstrap-icons": "1.10.5",
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
-    "date-fns": "2.30.0",
+    "date-fns": "^2.30.0",
     "draft-js": "0.11.7",
     "i18next": "22.4.15",
     "jwt-decode": "^3.1.2",
