--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "7.43.9",
     "react-hot-toast": "2.4.1",
     "react-i18next": "12.2.2",
+    "react-multi-date-picker": "^4.5.2",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.5",
