--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phenikaaX-nextjs-admin-template",
-  "version": "1.2.0",
+  "name": "admin",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,17 +16,15 @@
     "@babel/eslint-parser": "7.21.3",
     "@casl/ability": "6.5.0",
     "@casl/react": "3.1.0",
-    "@date-io/date-fns": "^2.16.0",
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.1",
+    "@emotion/cache": "11.10.8",
+    "@emotion/react": "11.10.8",
     "@emotion/server": "11.10.0",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "11.10.8",
     "@hookform/resolvers": "3.1.0",
     "@iconify/react": "4.1.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.128",
-    "@mui/material": "^5.14.0",
-    "@mui/x-date-pickers": "^5.0.17",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/lab": "5.0.0-alpha.128",
+    "@mui/material": "5.12.2",
     "@popperjs/core": "2.11.7",
     "@reduxjs/toolkit": "1.9.5",
     "axios": "1.4.0",
@@ -34,7 +32,7 @@
     "bootstrap-icons": "1.10.5",
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
-    "date-fns": "^2.30.0",
+    "date-fns": "2.30.0",
     "draft-js": "0.11.7",
     "i18next": "22.4.15",
     "jwt-decode": "^3.1.2",
@@ -47,9 +45,11 @@
     "react-datepicker": "4.11.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "7.43.9",
     "react-hot-toast": "2.4.1",
     "react-i18next": "12.2.2",
+    "react-markdown": "^9.0.1",
     "react-multi-date-picker": "^4.5.2",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
@@ -73,7 +73,6 @@
     "prettier": "2.8.4"
   },
   "resolutions": {
-    "proxy": "http://localhost:5000",
     "minipass": "5.0.0",
     "@mui/x-data-grid/@mui/system": "5.12.1",
     "react-credit-cards/prop-types": "15.7.2",
